--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
       <section class="section clients">
         <div class="container">
           <div class="row justify-content-center text-center mb-4">
-            <div class="col-10">
+            <div class="col-10 col-sm-12">
               <h3 class="h3 heading">¿Sobre que puedes hablar?</h3>
               <p>
                 Puedes hablar practicamente de cualquier cosa , ya que estaremos
