--- a/index.html
+++ b/index.html
@@ -286,10 +286,9 @@
         <div class="container">
           <div class="row justify-content-center text-center mb-4">
             <div class="col-5">
-              <h3 class="h3 heading">My Services</h3>
+              <h3 class="h3 heading">Encuestas </h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit
-                explicabo inventore.
+                Participa en las encuestas de cada semana para conocer tus preferencias.
               </p>
             </div>
           </div>
