--- a/index.html
+++ b/index.html
@@ -295,10 +295,9 @@
           <div class="row">
             <div class="col-12 col-sm-6 col-md-6 col-lg-3">
               <i class="bi bi-card-checklist"></i>
-              <h4 class="h4 mb-2">Web Design</h4>
+              <h4 class="h4 mb-2">Semana 1</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit
-                explicabo inventore.
+              Cuentanos que te parecio la pagina, que cambiarias y que te gusto mas.
               </p>
               <ul class="list-unstyled list-line">
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
