--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <section class="section services">
         <div class="container">
           <div class="row justify-content-center text-center mb-4">
-            <div class="col-5">
+            <div class="col-10 col-sm-12">
               <h3 class="h3 heading">Encuestas </h3>
               <p>
                 Participa en las encuestas de cada semana para conocer tus preferencias.
