--- a/about.html
+++ b/about.html
@@ -103,7 +103,7 @@
 
           <div class="col-md-4 ml-auto order-2" data-aos="fade-up">
             <h3 class="h3 mb-4">Misión</h3>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio illum labore quaerat harum. Illum nulla iure nostrum similique. Saepe, illum?</p>
+           <p>Facilitar información importante y necesaria acerca de las carreras que tiene el CBTis162, para ayudar a las próximas generaciones con nuestros artículos de interés, nuestras experiencias y otras herramientas como prácticas y metodologías individuales.</p>
 <br>
            <h3 class="h3 mb-4">Visión</h3>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, esse blanditiis! Placeat corporis debitis ea dolorem commodi, ex odit laboriosam repudiandae? Modi dolor at deserunt nostrum! Illum non unde explicabo soluta aliquid molestiae dolorem accusantium, eligendi iure corporis harum adipisci sapiente laudantium fugiat officia ipsum eos cupiditate repellendus. Maxime, dicta!</p>          
