--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
            <p>Facilitar información importante y necesaria acerca de las carreras que tiene el CBTis162, para ayudar a las próximas generaciones con nuestros artículos de interés, nuestras experiencias y otras herramientas como prácticas y metodologías individuales.</p>
 <br>
            <h3 class="h3 mb-4">Visión</h3>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, esse blanditiis! Placeat corporis debitis ea dolorem commodi, ex odit laboriosam repudiandae? Modi dolor at deserunt nostrum! Illum non unde explicabo soluta aliquid molestiae dolorem accusantium, eligendi iure corporis harum adipisci sapiente laudantium fugiat officia ipsum eos cupiditate repellendus. Maxime, dicta!</p>          
+<p>Como alumnos formados en esta institución queremos compartir nuestros conocimientos a través de este medio. Nuestra plataforma pretende ser una herramienta útil donde todos los alumnos, puedan recurrir cuando necesiten adquirir información necesaria para su propio desarrollo como futuros técnicos.</p>          
           </div>
 
          
