--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
           <ul class="custom-menu">
             <li class="active"><a href="index.html">Inicio</a></li>
             <li><a href="about.html">Sobre Nosotros</a></li>
-            <li><a href="services.html">-</a></li>
+            <li><a href="services.html">Portafolio</a></li>
             <li><a href="works.html">Articulos</a></li>
             <li><a href="contact.html">Contacto</a></li>
           </ul>
@@ -119,12 +119,12 @@
         </div>
 <br>
         <div class="row mb-5 align-items-end">
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-6 maps" data-aos="fade-up">
             <h3>Ubicacion</h3>
             <p> Las Palmas, 61517 Zitácuaro, Michoacán</p>
             <br>
             <br>
-            <h3>Gmail</h3>
+            <h3>Correo</h3>
             <a href="mailto:comunidadestudiantilcbtis162@gmail.com">comunidadestudiantilcbtis162</a>
           </div>
           <div class="col-md-6" data-aos="fade-up">
