--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <ul class="custom-menu">
               <li class="active"><a href="index.html">Inicio</a></li>
               <li><a href="about.html">Sobre Nosotros</a></li>
-              <li><a href="services.html">-</a></li>
+              <li><a href="services.html">Portafolio</a></li>
               <li><a href="works.html">Articulos</a></li>
               <li><a href="contact.html">Contacto</a></li>
             </ul>
