--- a/programacion.html
+++ b/programacion.html
@@ -86,12 +86,12 @@
 
   <main id="main">
 
-    <section class="section">
+    <section class="section blog">
       <div class="container">
         <div class="row mb-4 align-items-center">
-          <div class="col-md-6" data-aos="fade-up">
-            <h2>Work Single Page</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
+          <div class="col-md-7" data-aos="fade-up">
+            <h2>Programación</h2>
+            <p>Orientado a objetos, Desarrollo Web, Base de Datos, Aplicaciones Moviles.</p>
           </div>
         </div>
       </div>
