--- a/services.html
+++ b/services.html
@@ -150,12 +150,13 @@
                 <h4 class="h4 mb-2">Moises Acosta - <span>M-a Web</span></h4>
                 <img
                   class="col-md-6"
-                  src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/279946020_1438366926607618_864691455066805476_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeEVAeYXMTSNRidvsqle1RMOwkOrk5wPUX3CQ6uTnA9RfcEw6NAGkrzwFf4CMTApUtcOPCuLF1O4g3hWevcH8OT7&_nc_ohc=Lx50KhnR4JQAX9O68Je&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT_j7uP19m2X-gIL3yg-I6OXgdE16rZVfI_wLVXjIiNYuw&oe=6276CE85"
+                  src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/279850560_1440707279706916_1556394771436941808_n.jpg?_nc_cat=104&ccb=1-6&_nc_sid=730e14&_nc_ohc=aqAcg-hwwBoAX8RVRt4&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT8MieZw4Ao1JKIGh3POHV3ZwfitbPoBeMMe9GgNw9BVJQ&oe=627AA205"
                   width="100%"
                   alt=""
                 />
                 <br />
                 <br />
+                <div class="col-md-6"><p>Esta es una pagina modular relacionada a diseño web, si te interesa este tema te invito a visitarla, ya que subiré artículos, practicas y todo lo relacionado a diseño web.  </p></div>
                 <a
                   href="https://moisesacosta-fronend.github.io/portafolio_oscuro1/"
                   target="_blank"
