--- a/services.html
+++ b/services.html
@@ -132,8 +132,8 @@
             <div class="col-md-7 services" data-aos="fade-up">
               <h2>Mi Portafolio.</h2>
               <p>
-                Esta sección esta hecha para dar a conocer los proyectos de los
-                alumnos fuera de la institución .
+                Esta sección esta hecha para dar a conocer los proyectos externos de los
+                alumnos, fuera de la institución .
               </p>
             </div>
           </div>
