--- a/index.html
+++ b/index.html
@@ -297,16 +297,10 @@
               <i class="bi bi-card-checklist"></i>
               <h4 class="h4 mb-2">Semana 1</h4>
               <p>
-                Cuentanos que te parecio la pagina, que cambiarias y que te
+                Cuentanos que te parecio la pagina, que cambiarias y que sección te
                 gusto mas.
               </p>
-              <ul class="list-unstyled list-line">
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-                <li>Non pariatur nisi</li>
-                <li>Magnam soluta quod</li>
-                <li>Lorem ipsum dolor</li>
-                <li>Cumque quae aliquam</li>
-              </ul>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLScykjFAzMtdV1dVQNZSO0wpk-fUI0uFTA8Wp_xWcS-awJveYg/viewform?usp=sf_link" target="_blank">Ir a formulario</a>
             </div>
            
           
