--- a/works.html
+++ b/works.html
@@ -155,7 +155,7 @@
             data-aos-delay="200"
           >
             <div class="item programacion col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-single.html" class="item-wrap fancybox">
+              <a href="programacion.html" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Programación</h3>
                 </div>
