--- a/services.html
+++ b/services.html
@@ -132,8 +132,8 @@
             <div class="col-md-7 services" data-aos="fade-up">
               <h2>Mi Portafolio.</h2>
               <p>
-                Esta sección esta hecha para dar a conocer los proyectos externos de los
-                alumnos, fuera de la institución .
+                Esta sección esta hecha para dar a conocer los proyectos
+                externos de los alumnos, fuera de la institución .
               </p>
             </div>
           </div>
@@ -156,7 +156,13 @@
                 />
                 <br />
                 <br />
-                <div class="col-md-6"><p>Esta es una pagina modular relacionada a diseño web, si te interesa este tema te invito a visitarla, ya que subiré artículos, practicas y todo lo relacionado a diseño web.  </p></div>
+                <div class="col-md-6">
+                  <p>
+                    Esta es una pagina modular relacionada a diseño web, si te
+                    interesa este tema te invito a visitarla, ya que subiré
+                    artículos, practicas y todo lo relacionado a diseño web.
+                  </p>
+                </div>
                 <a
                   href="https://moisesacosta-fronend.github.io/portafolio_oscuro1/"
                   target="_blank"
