--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               </a>
             </div>
             <div class="item programacion col-sm-6 col-md-4 col-lg-4 mb-4">
-              <a href="work-single.html" class="item-wrap fancybox">
+              <a href="ofimatica.html" class="item-wrap fancybox">
                 <div class="work-info">
                   <h3>Ofimatica</h3>
                 </div>
