--- a/ofimatica.html
+++ b/ofimatica.html
@@ -107,31 +107,12 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <div class="testimonial-wrap">
-                     <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/279969749_1439269376517373_7164625438823818316_n.jpg?stp=dst-jpg_p526x395&_nc_cat=104&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHricxBA1MODBRRKgww8KqumHME2CGG2eOYcwTYIYbZ4xDuombXkfi0k2QqubulyF4xT2WFcoX5dGFgYFIiRRU-&_nc_ohc=bDRjslfhcGQAX_WJhmA&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT_YQIINHtXeRu_7FPr9hJeW83g8cLzzdP3apGwbJyxVnw&oe=62777211" width="100%" alt="">
-                    </div>
-                  </div><!-- End testimonial item -->
-                  <div class="swiper-slide">
-                    <div class="testimonial-wrap">
-                     <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/279932283_1439269356517375_5216070135684683413_n.jpg?stp=dst-jpg_p552x414&_nc_cat=108&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeEoJ3WpFJf_HcFLcWesXb-vbzoG_3s2-sVvOgb_ezb6xRM5iVABDerDgGKBQNWvlqCLboU5u0HkTv2dThSs8fZw&_nc_ohc=KzvfjvJcyVMAX9BWpeQ&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT8tq6NU0_oKbdMIyBTlixOGFoe_RkWYRs3JrsCzSYJCqQ&oe=627847C0" width="100%"  alt="">
-                    </div>
-                  </div><!-- End testimonial item -->
-                  <div class="swiper-slide">
-                    <div class="testimonial-wrap">
-                      <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/280113138_1439269403184037_930360992725934027_n.jpg?stp=dst-jpg_p552x414&_nc_cat=104&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHA69gXvPl8xJX3x97pKcW4iJ7jJQnbWxiInuMlCdtbGL7kD4xsiJBuBfNETG77pW3n2r02WUzxe-1qPlbakI8f&_nc_ohc=FsmCeaJ1HaQAX8mGm9b&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT9ejzFsTnIjYMdBR9vwnYSIxvFToCvfKYbz2Ih0VFfOIw&oe=62787CAF" width="100%" alt="">
-                    </div>
-                  </div><!-- End testimonial item -->
-                </div>
-                <div class="swiper-pagination"></div>
-              </div>
+              <img class ="img_ofimatica" src="https://images.pexels.com/photos/4050295/pexels-photo-4050295.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="100%" alt="">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
-                <h3 class="h3">Pagina Web</h3>
-                <p class="mb-4"><span class="text-muted">Moises Acosta</span></p>
+                <h3 class="h3">Tipos de Paginas Web.</h3>
+                <p class="mb-4"><span class="text-muted">Fatima Martinez</span></p>
                 <p>04/05/22</p>
                 <div class="mb-5">
                   <p>Aqui les dejo una practica de una pagina web estatica hecha con HTML y CSS  .</p>
