--- a/index.html
+++ b/index.html
@@ -325,11 +325,7 @@
               <div class="swiper-slide">
                 <div class="testimonial-wrap">
                   <div class="testimonial">
-                    <img
-                      src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/277146583_1410444322733212_4390517564348737043_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=174925&_nc_eui2=AeF6PWcYoARntkTxugZ9ybG42OKB5MVUpDXY4oHkxVSkNbqTdJp8K8qZXVp7WXMpHaRkf_C-7gpPXN79Sex839yG&_nc_ohc=_d4dipLRi0AAX8wGvhb&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT-_zNsZEzaO2WdqXH3C2LjL8hoLSPFAw5ZLDV8SUnX9Ng&oe=6273B23D"
-                      alt="Image"
-                      class="img-fluid"
-                    />
+                    <img src="assets/img/WhatsApp Image 2022-05-09 at 9.22.09 PM.jpeg" alt="">
                     <blockquote>
                       <br />
                       <p>Maquetado y Diseño.</p>
