--- a/ofimatica.html
+++ b/ofimatica.html
@@ -107,7 +107,7 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-              <img class ="img_ofimatica" src="https://images.pexels.com/photos/4050295/pexels-photo-4050295.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="100%" alt="">
+              <img class = "img_ofimatica" src="https://images.pexels.com/photos/4050295/pexels-photo-4050295.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" width="100%" alt="">
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
@@ -122,14 +122,13 @@
             </div>
             <div class="col-md-12 m-lg-auto">
               <p>Cuando hablamos de una página web estática nos referimos a aquellas que se crean con el lenguaje HTML y que no contienen ninguna funcionalidad que permita al usuario interactuar con la página, excepto para leer el contenido, como por ejemplo Aula Blog que es un blog educativo, que se caracteriza por publicar otras publicaciones de otros blogs, con el fin de reunir diferentes temas en un mismo lugar.</p>
-              <br>
+              
               <p>A diferencia de las estáticas, las páginas dinámicas están construidas con otros lenguajes de programación que, gracias a ellos, podemos ofrecer a los usuarios la posibilidad de cambiar el contenido, ya sea el texto, los menús o incluso las imágenes, como por ejemplo Artiem que es una cadena hotelera que pone a disposición de sus clientes una página web totalmente viva. En ella ofrece múltiples servicios de información y formas de contacto, así como un apartado de blog para mantener al tanto a su comunidad.</p>
             </div>
           </div>
         </div>
         <div class = "margen-articulos">
-          <div class = "wave-item" style="height:100px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.21,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #0d1e2d;"></path></svg></div>
-
+          <div class = "wave-item" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M421.18,-45.88 C531.23,88.32 350.64,76.49 467.45,203.79 L500.00,150.00 L519.37,-11.33 Z" style="stroke: none; fill: rgb(0, 0, 0);"></path></svg></div>
         </div>
 
        
