--- a/programacion.html
+++ b/programacion.html
@@ -129,7 +129,7 @@
           </div>
         </div>
         <div class = "margen-articulos">
-          <div class = "wave-item" style="height:100px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.21,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: rgb(229, 170, 61);;"></path></svg></div>
+          <div class = "wave-item" style="height:100px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.21,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: burlywood;"></path></svg></div>
 
         </div>
         <br>
