--- a/programacion.html
+++ b/programacion.html
@@ -144,7 +144,7 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="testimonial-wrap">
-                     <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/279969749_1439269376517373_7164625438823818316_n.jpg?stp=dst-jpg_p526x395&_nc_cat=104&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHricxBA1MODBRRKgww8KqumHME2CGG2eOYcwTYIYbZ4xDuombXkfi0k2QqubulyF4xT2WFcoX5dGFgYFIiRRU-&_nc_ohc=bDRjslfhcGQAX_WJhmA&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT_YQIINHtXeRu_7FPr9hJeW83g8cLzzdP3apGwbJyxVnw&oe=62777211" width="100%" alt="">
+                     <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/279969749_1439269376517373_7164625438823818316_n.jpg?_nc_cat=104&ccb=1-6&_nc_sid=730e14&_nc_ohc=EsxG0sHXpcIAX8cYDhz&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT-rQqc54UNCRWAuvmlicv4kx8XjAbq_RjXk_43ZK27lrw&oe=627F5B11" width="100%" alt="">
                     </div>
                   </div><!-- End testimonial item -->
                   <div class="swiper-slide">
