--- a/programacion.html
+++ b/programacion.html
@@ -149,12 +149,12 @@
                   </div><!-- End testimonial item -->
                   <div class="swiper-slide">
                     <div class="testimonial-wrap">
-                     <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/279932283_1439269356517375_5216070135684683413_n.jpg?stp=dst-jpg_p552x414&_nc_cat=108&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeEoJ3WpFJf_HcFLcWesXb-vbzoG_3s2-sVvOgb_ezb6xRM5iVABDerDgGKBQNWvlqCLboU5u0HkTv2dThSs8fZw&_nc_ohc=KzvfjvJcyVMAX9BWpeQ&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT8tq6NU0_oKbdMIyBTlixOGFoe_RkWYRs3JrsCzSYJCqQ&oe=627847C0" width="100%"  alt="">
+                     <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/279932283_1439269356517375_5216070135684683413_n.jpg?_nc_cat=108&ccb=1-6&_nc_sid=730e14&_nc_ohc=8f3VuN5lG3oAX-XxazP&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT9zuw86qMkCRZbXy-feSToBnT1rqUySad-wf63HY03DtA&oe=627E3680" width="100%"  alt="">
                     </div>
                   </div><!-- End testimonial item -->
                   <div class="swiper-slide">
                     <div class="testimonial-wrap">
-                      <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/280113138_1439269403184037_930360992725934027_n.jpg?stp=dst-jpg_p552x414&_nc_cat=104&ccb=1-5&_nc_sid=730e14&_nc_eui2=AeHA69gXvPl8xJX3x97pKcW4iJ7jJQnbWxiInuMlCdtbGL7kD4xsiJBuBfNETG77pW3n2r02WUzxe-1qPlbakI8f&_nc_ohc=FsmCeaJ1HaQAX8mGm9b&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT9ejzFsTnIjYMdBR9vwnYSIxvFToCvfKYbz2Ih0VFfOIw&oe=62787CAF" width="100%" alt="">
+                      <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/280113138_1439269403184037_930360992725934027_n.jpg?_nc_cat=104&ccb=1-6&_nc_sid=730e14&_nc_ohc=43ub-r-VLycAX9S7HZc&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT8uHDsGEfd3pSDaAccgO2QCuB4nGX_TXEw6gbsqZwe80g&oe=627E6B6F" width="100%" alt="">
                     </div>
                   </div><!-- End testimonial item -->
                 </div>
