--- a/programacion.html
+++ b/programacion.html
@@ -109,7 +109,7 @@
             <div class="col-md-6 ml-auto" data-aos="fade-up" data-aos-delay="100">
               <div class="sticky-content">
                 <h3 class="h3">Como lograr un sitio web atractivo ?</h3>
-                <p class="mb-6"><span class="text-muted">Moises Acosta</span></p>
+                <p class="mb-6"><span class="text-muted">Carlos Eduardo</span></p>
                 <p>04/05/22</p>
                 <div class="col-mb-12">
                   <p>Aqui hay unas consideraciones que debes de tener...</p>
