--- a/services.html
+++ b/services.html
@@ -133,7 +133,7 @@
               <h2>Mi Portafolio.</h2>
               <p>
                 Esta sección esta hecha para dar a conocer los proyectos
-                externos de los alumnos, fuera de la institución .
+                 de los alumnos fuera de la institución .
               </p>
             </div>
           </div>
