--- a/index.html
+++ b/index.html
@@ -251,29 +251,27 @@
           </div>
           <div class="row">
             <div class="col-12 col-sm-12 col-md-4">
-              <a href="#" class="client-logo"
-                ><img
+              
+                <img
                   src="assets/img/undraw_creative_woman_re_u5tk.svg"
                   alt="Image"
                   class="img-fluid"
-              /></a>
+              />
             </div>
 
             <div class="col-12 col-sm-12 col-md-4">
-              <a href="#" class="client-logo"
-                ><img
+             <img
                   src="assets/img/undraw_moments_0y20.svg"
                   alt="Image"
                   class="img-fluid"
-              /></a>
+              />
             </div>
             <div class="col-12 col-sm-12 col-md-4">
-              <a href="#" class="client-logo"
-                ><img
+             <img
                   src="assets/img/undraw_audio_player_re_cl20.svg"
                   alt="Image"
                   class="img-fluid"
-              /></a>
+              />
             </div>
           </div>
         </div>
@@ -295,7 +293,6 @@
           <div class="row">
             <div class="col-12 col-sm-6 col-md-6 col-lg-3">
               <i class="bi bi-card-checklist"></i>
-              <h4 class="h4 mb-2">Semana 1</h4>
               <p>
                 Cuentanos que te parecio la pagina, que cambiarias y que sección
                 te gusto mas.
@@ -315,7 +312,7 @@
 
       <section class="section pt-0">
         <div class="container">
-          <h2>¿ Quienes Somos ?</h2>
+          <h2>¿Quienes Somos?</h2>
           <div
             class="testimonials-slider swiper"
             data-aos="fade-up"
@@ -328,7 +325,7 @@
                     <img src="assets/img/WhatsApp Image 2022-05-09 at 9.22.09 PM.jpeg" alt="">
                     <blockquote>
                       <br />
-                      <p>Maquetado y Diseño.</p>
+                      <p>Maquetado y Diseño</p>
                     </blockquote>
                     <p>Moises Acosta - Programación</p>
                   </div>
@@ -366,7 +363,7 @@
                     />
                     <blockquote>
                       <br />
-                      <p>Soporte y Actualizaciones.</p>
+                      <p>Soporte y Actualizaciones</p>
                     </blockquote>
                     <p>Carlos Eduardo - Programación</p>
                   </div>
@@ -384,7 +381,7 @@
                     />
                     <blockquote>
                       <br />
-                      <p>Contacto y Ayuda.</p>
+                      <p>Contacto y Ayuda</p>
                     </blockquote>
                     <p>Santiago Garduño - Programación</p>
                   </div>
