--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                       <br />
                       <p>Soporte y Actualizaciones</p>
                     </blockquote>
-                    <p>Carlos Eduardo - Programación</p>
+                    <p>Moises Acosta - Programación / Carlos Eduardo - Programación</p>
                   </div>
                 </div>
               </div>
