--- a/ofimatica.html
+++ b/ofimatica.html
@@ -90,7 +90,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-7" data-aos="fade-up">
-            <h2>Ofimatica</h2>
+            <h2>Ofimatica<i class="fas fa-laptop"></i></h2>
            
           </div>
         </div>
