--- a/programacion.html
+++ b/programacion.html
@@ -90,7 +90,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-7" data-aos="fade-up">
-            <h2>Programación</h2>
+            <h2>Programación<i class="fas fa-coffee"></i></h2>
             <p>Orientado a objetos, Desarrollo Web, Base de Datos, Aplicaciones Moviles.</p>
           </div>
         </div>
