--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                       <p>Lider de proyecto</p>
                     </blockquote>
                     <p>
-                      Moises Acosta - Programación / Kiara Lizeth - Alimentos
+                       Kiara Lizeth - Alimentos
                     </p>
                   </div>
                 </div>
@@ -365,7 +365,7 @@
                       <br />
                       <p>Soporte y Actualizaciones</p>
                     </blockquote>
-                    <p>Moises Acosta - Programación / Carlos Eduardo - Programación</p>
+                    <p> Carlos Eduardo - Programación</p>
                   </div>
                 </div>
               </div>
