--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div>
                 <img
                   class="img-fluid"
-                  src="https://images.pexels.com/photos/8332112/pexels-photo-8332112.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                  src="https://images.unsplash.com/photo-1639406568540-5381611f6cfb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
                 />
               </a>
             </div>
@@ -347,7 +347,7 @@
                     </blockquote>
                     <p>
                       <br>
-                       Kiara Lizeth - Alimentos
+                       Kiara Lizbeth - Alimentos
                     </p>
                   </div>
                 </div>
