--- a/programacion.html
+++ b/programacion.html
@@ -144,17 +144,17 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="testimonial-wrap">
-                     <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/279969749_1439269376517373_7164625438823818316_n.jpg?_nc_cat=104&ccb=1-6&_nc_sid=730e14&_nc_ohc=EsxG0sHXpcIAX8cYDhz&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT-rQqc54UNCRWAuvmlicv4kx8XjAbq_RjXk_43ZK27lrw&oe=627F5B11" width="100%" alt="">
+                      <img src="assets/img/practica1.jpg" width="100%" alt="">
                     </div>
                   </div><!-- End testimonial item -->
                   <div class="swiper-slide">
                     <div class="testimonial-wrap">
-                     <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/279932283_1439269356517375_5216070135684683413_n.jpg?_nc_cat=108&ccb=1-6&_nc_sid=730e14&_nc_ohc=8f3VuN5lG3oAX-XxazP&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT9zuw86qMkCRZbXy-feSToBnT1rqUySad-wf63HY03DtA&oe=627E3680" width="100%"  alt="">
+                      <img src="assets/img/practica3.jpg" width="100%" alt="">
                     </div>
                   </div><!-- End testimonial item -->
                   <div class="swiper-slide">
                     <div class="testimonial-wrap">
-                      <img src="https://scontent.fmlm3-1.fna.fbcdn.net/v/t39.30808-6/280113138_1439269403184037_930360992725934027_n.jpg?_nc_cat=104&ccb=1-6&_nc_sid=730e14&_nc_ohc=43ub-r-VLycAX9S7HZc&_nc_ht=scontent.fmlm3-1.fna&oh=00_AT8uHDsGEfd3pSDaAccgO2QCuB4nGX_TXEw6gbsqZwe80g&oe=627E6B6F" width="100%" alt="">
+                      <img src="assets/img/practica2.jpg" width="100%" alt="">
                     </div>
                   </div><!-- End testimonial item -->
                 </div>
