--- a/services.html
+++ b/services.html
@@ -148,7 +148,7 @@
                 data-aos-delay=""
               >
                 <h4 class="h4 mb-2">Moises Acosta - <span>M-a Web</span></h4>
-                <img src="assets/img/m-aweb.jpg" width="100%" alt="">
+                <img  class = "col-md-6" src="assets/img/m-aweb.jpg" width="100%" alt="">
                 <br />
                 <br />
                 <div class="col-md-6">
