--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.jpg" rel="icon" />
-    <link href="assets/img/favicon.jpg" rel="apple-touch-icon" />
+    <link href="assets/img/home/favicon.jpg" rel="icon" />
+    <link href="assets/img/home/favicon.jpg" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -253,7 +253,7 @@
             <div class="col-12 col-sm-12 col-md-4">
               
                 <img
-                  src="assets/img/undraw_creative_woman_re_u5tk.svg"
+                  src="assets/img/home/undraw_creative_woman_re_u5tk.svg"
                   alt="Image"
                   class="img-fluid"
               />
@@ -261,14 +261,14 @@
 
             <div class="col-12 col-sm-12 col-md-4">
              <img
-                  src="assets/img/undraw_moments_0y20.svg"
+                  src="assets/img/home/undraw_moments_0y20.svg"
                   alt="Image"
                   class="img-fluid"
               />
             </div>
             <div class="col-12 col-sm-12 col-md-4">
              <img
-                  src="assets/img/undraw_audio_player_re_cl20.svg"
+                  src="assets/img/home/undraw_audio_player_re_cl20.svg"
                   alt="Image"
                   class="img-fluid"
               />
@@ -322,7 +322,7 @@
               <div class="swiper-slide">
                 <div class="testimonial-wrap">
                   <div class="testimonial">
-                    <img src="assets/img/WhatsApp Image 2022-05-09 at 9.22.09 PM.jpeg" alt="">
+                    <img src="assets/img/home/WhatsApp Image 2022-05-09 at 9.22.09 PM.jpeg" alt="">
                     <blockquote>
                       <br />
                       <p>Maquetado y Diseño</p>
@@ -337,7 +337,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial">
                     <img
-                      src="assets/img/WhatsApp Image 2022-04-30 at 10.51.58 PM.jpeg"
+                      src="assets/img/home/WhatsApp Image 2022-04-30 at 10.51.58 PM.jpeg"
                       alt="Image"
                       class="img-fluid"
                     />
@@ -358,7 +358,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial">
                     <img
-                      src="assets/img/WhatsApp Image 2022-04-30 at 10.50.42 PM.jpeg"
+                      src="assets/img/home/WhatsApp Image 2022-04-30 at 10.50.42 PM.jpeg"
                       alt="Image"
                       class="img-fluid"
                     />
@@ -376,7 +376,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial">
                     <img
-                      src="assets/img/WhatsApp Image 2022-04-30 at 10.39.21 PM.jpeg"
+                      src="assets/img/home/WhatsApp Image 2022-04-30 at 10.39.21 PM.jpeg"
                       alt="Image"
                       class="img-fluid"
                     />
