--- a/programacion.html
+++ b/programacion.html
@@ -144,17 +144,17 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="testimonial-wrap">
-                      <img src="assets/img/practica1.jpg" width="100%" alt="">
+                      <img src="assets/img/articulos/practica1.jpg" width="100%" alt="">
                     </div>
                   </div><!-- End testimonial item -->
                   <div class="swiper-slide">
                     <div class="testimonial-wrap">
-                      <img src="assets/img/practica3.jpg" width="100%" alt="">
+                      <img src="assets/img/articulos/practica3.jpg" width="100%" alt="">
                     </div>
                   </div><!-- End testimonial item -->
                   <div class="swiper-slide">
                     <div class="testimonial-wrap">
-                      <img src="assets/img/practica2.jpg" width="100%" alt="">
+                      <img src="assets/img/articulos/practica2.jpg" width="100%" alt="">
                     </div>
                   </div><!-- End testimonial item -->
                 </div>
