--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
       <div class="container">
 
         <div class="row mb-5 align-items-end">
-          <div class="col-md-12" data-aos="fade-up">
+          <div class="col-md-10 col-sm-12" data-aos="fade-up">
             <h2>Contacto</h2>
             <p class="mb-0"> Si formas parte de CBTis162, envíanos un correo con un artículo,
               video o fotografía sobre el tema que te gustaría hablar. <br />
